--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>VotaPrato</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
+  <head>
+    <title>Programa de Qualificação de Restaurante</title>
+    <%= stylesheet_link_tag :all %>
+    <%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
+  </head>
+  <body>
+    <div id="pagina">
+      <div id="topo">
+        <%= image_tag "caelum.png", :id => "logo", :border => 0 %>
+        <%= menu_principal %>
+        <p style="color: green"><%= flash[:notice] %> </p>
+      </div>
 
-<%= yield %>
-
-</body>
+      <div id="corpo">
+        <%= yield %>
+      </div>
+    </div>
+  </body>
 </html>
+
