--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -1,24 +1,29 @@
 <h1>Listagem de Restaurantes</h1>
 
-<table>
-  <tr>
+<div id="new_link">
+  <%= image_tag "icn_circulo.png" %> <%= link_to "Cadastrar Restaurante", new_restaurante_url %>
+</div>
+
+<table width="60%" class="tabelaPadrao" cellpadding="4" cellspacing="0" border="0">
+  <tr class="linha_titulo1">
     <th>Nome</th>
     <th>Endereço</th>
     <th>Especialidade</th>
+    <th width="5%"></th>
+    <th width="5%"></th>
+    <th width="5%"></th>
   </tr>
 
   <% @restaurantes.each do |restaurante| %>
     <tr>
       <td><%= restaurante.nome %></td>
       <td><%= restaurante.endereco %></td>
-      <td><%= restaurante.especialidade %></td>
-      <td><%= link_to 'Mostrar', {:action => "show", :id => restaurante} %></td>
-      <td><%= link_to 'Editar', {:action => "edit", :id => restaurante} %></td>
-      <td><%= link_to 'Deletar', {:action => "destroy", :id => restaurante} %></td>
+      <td align="center"><%= restaurante.especialidade %></td>
+      <td align="center"><%= link_to image_tag("icn_detalhes.png", :border => 0, :title => "Visualizar"), {:action => "show", :id => restaurante} %></td>
+      <td align="center"><%= link_to image_tag("icn_editar.png", :border => 0, :title => "Edtar"), {:action => "edit", :id => restaurante} %></td>
+      <td align="center"><%= link_to image_tag("icn_deletar.png", :border => 0, :title => "Excluir"), restaurante, :confirm => 'Você tem certeza que desaja excluir.', :method => :delete %></td>
     </tr>
   <% end %>
 </table>
 </br>
-
-<%= link_to "Novo", new_restaurante_url %>
 
