Inicio da implementacao dos testes unitarios nos models utilizand o RSpec. Models testados: cliente, prato e qualificacao.

--- a/app/views/qualificacoes/show.html.erb
+++ b/app/views/qualificacoes/show.html.erb
@@ -24,3 +24,7 @@
 <%= link_to 'Edit', edit_qualificacao_path(@qualificacao) %> |
 <%= link_to 'Back', qualificacoes_path %>
 
+<% unless @qualificacao.comentarios.empty? %>
+  <%= comentarios @qualificacao %>
+<% end %>
+
