--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Programa de Qualificação de Restaurante</title>
     <%= stylesheet_link_tag :all %>
-    <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag 'jquery', 'rails' %>
     <%= csrf_meta_tag %>
   </head>
   <body>
@@ -16,6 +16,11 @@
 
       <div id="corpo">
         <%= yield %>
+
+        <script type="text/javascript">
+          <%= yield :js %>
+        </script>
+
       </div>
     </div>
   </body>
